--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <!-- Mobile Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <!-- Site Metas -->
-  <meta name="keywords" content="Pet care, Cuttack, Odisha, grooming, training, veterinary services, pricing" />
-  <meta name="description" content="Cuttack's Pet Care offers grooming, training, veterinary services, nutritional advice, and affordable pricing for pets in Cuttack, Odisha. Providing the best care for your furry companions!" />
+  <meta name="keywords" content="Pet care, Cuttack, Odisha, grooming, training, veterinary services" />
+  <meta name="description" content="Cuttack's Pet Care offers grooming, training, veterinary services, and nutritional advice for your pets in Cuttack, Odisha. Providing the best care for your furry companions!" />
   <meta name="author" content="Cuttack's Pet Care" />
 
   <title>Cuttack's Pet Care</title>
@@ -44,9 +44,6 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#about-section">About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#pricing-section">Pricing</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#contact-section">Contact Us</a>
@@ -114,74 +111,25 @@
           <p>
             Cuttack's Pet Care is the leading pet care provider in Odisha, specializing in grooming, training, veterinary services, and nutritional consultation. We believe in creating a stress-free environment for your pets while ensuring they receive the best care possible. Our services are tailored to meet the unique needs of each pet, from playful puppies to senior companions.
           </p>
+          <p>
+            **Our Services Include:**
+            <ul>
+              <li><strong>Grooming:</strong> Full-service grooming to keep your pets clean, healthy, and stylish.</li>
+              <li><strong>Training:</strong> Professional training programs to teach obedience, tricks, and behavioral improvement.</li>
+              <li><strong>Veterinary Services:</strong> Regular health check-ups, vaccinations, and emergency care are available on-site.</li>
+              <li><strong>Nutrition Advice:</strong> Personalized diet plans to ensure your pets stay fit and healthy.</li>
+            </ul>
+          </p>
+          <div class="btn-box">
+            <a href="">
+              <span>Learn More</span>
+              <img src="images/link-arrow.png" alt="">
+            </a>
+          </div>
         </div>
       </div>
     </section>
     <!-- end about section -->
-
-    <!-- pricing section -->
-    <section class="pricing_section layout_padding" id="pricing-section">
-      <div class="container">
-        <div class="heading_container">
-          <img src="images/heading-img.png" alt="">
-          <h2>Our Pricing</h2>
-          <p>Affordable services for your furry friends in Cuttack, Odisha.</p>
-        </div>
-        <div class="row">
-          <div class="col-md-4">
-            <div class="pricing-box">
-              <h4>Basic Grooming</h4>
-              <p>Includes bathing, nail trimming, and brushing.</p>
-              <h3>₹500</h3>
-              <img src="images/grooming-basic.jpg" alt="Basic Grooming" class="img-fluid">
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="pricing-box">
-              <h4>Advanced Grooming</h4>
-              <p>Includes bathing, haircut, ear cleaning, and nail trimming.</p>
-              <h3>₹1000</h3>
-              <img src="images/grooming-advanced.jpg" alt="Advanced Grooming" class="img-fluid">
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="pricing-box">
-              <h4>Training Sessions</h4>
-              <p>Basic obedience training for dogs (5 sessions).</p>
-              <h3>₹3000</h3>
-              <img src="images/training.jpg" alt="Training Sessions" class="img-fluid">
-            </div>
-          </div>
-        </div>
-        <div class="row mt-4">
-          <div class="col-md-4">
-            <div class="pricing-box">
-              <h4>Veterinary Consultation</h4>
-              <p>General health check-up and advice.</p>
-              <h3>₹500</h3>
-              <img src="images/vet-consultation.jpg" alt="Veterinary Consultation" class="img-fluid">
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="pricing-box">
-              <h4>Vaccination Package</h4>
-              <p>Full vaccination for dogs or cats.</p>
-              <h3>₹1500</h3>
-              <img src="images/vaccination.jpg" alt="Vaccination Package" class="img-fluid">
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="pricing-box">
-              <h4>Pet Nutrition Plan</h4>
-              <p>Personalized diet plan for pets.</p>
-              <h3>₹800</h3>
-              <img src="images/nutrition-plan.jpg" alt="Pet Nutrition Plan" class="img-fluid">
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- end pricing section -->
 
     <!-- contact section -->
     <section class="contact_section layout_padding-top" id="contact-section">
@@ -224,6 +172,35 @@
       </div>
     </section>
     <!-- end contact section -->
+
+    <!-- info section -->
+    <section class="info_section ">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 col-lg-3">
+            <div class="info_contact">
+              <h5>CONTACT INFO</h5>
+              <div>
+                <img src="images/call.png" alt="" />
+                <p>+91 9876543210</p>
+              </div>
+              <div>
+                <img src="images/mail.png" alt="" />
+                <p>support@cuttackpetcare.com</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-3">
+            <div class="info_time">
+              <h5>Opening Hours</h5>
+              <p>Monday to Saturday</p>
+              <p>10:00 AM to 7:00 PM (IST)</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- end info section -->
 
     <!-- footer section -->
     <section class="container-fluid footer_section ">
