--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <!-- Mobile Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <!-- Site Metas -->
-  <meta name="keywords" content="Pet care, Cuttack, Odisha, grooming, training, veterinary services" />
-  <meta name="description" content="Cuttack's Pet Care offers grooming, training, veterinary services, and nutritional advice for your pets in Cuttack, Odisha. Providing the best care for your furry companions!" />
+  <meta name="keywords" content="Pet care, Cuttack, Odisha, grooming, training, veterinary services, pricing" />
+  <meta name="description" content="Cuttack's Pet Care offers grooming, training, veterinary services, nutritional advice, and affordable pricing for pets in Cuttack, Odisha. Providing the best care for your furry companions!" />
   <meta name="author" content="Cuttack's Pet Care" />
 
   <title>Cuttack's Pet Care</title>
@@ -44,6 +44,9 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#about-section">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#pricing-section">Pricing</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#contact-section">Contact Us</a>
@@ -111,25 +114,45 @@
           <p>
             Cuttack's Pet Care is the leading pet care provider in Odisha, specializing in grooming, training, veterinary services, and nutritional consultation. We believe in creating a stress-free environment for your pets while ensuring they receive the best care possible. Our services are tailored to meet the unique needs of each pet, from playful puppies to senior companions.
           </p>
-          <p>
-            **Our Services Include:**
-            <ul>
-              <li><strong>Grooming:</strong> Full-service grooming to keep your pets clean, healthy, and stylish.</li>
-              <li><strong>Training:</strong> Professional training programs to teach obedience, tricks, and behavioral improvement.</li>
-              <li><strong>Veterinary Services:</strong> Regular health check-ups, vaccinations, and emergency care are available on-site.</li>
-              <li><strong>Nutrition Advice:</strong> Personalized diet plans to ensure your pets stay fit and healthy.</li>
-            </ul>
-          </p>
-          <div class="btn-box">
-            <a href="">
-              <span>Learn More</span>
-              <img src="images/link-arrow.png" alt="">
-            </a>
-          </div>
         </div>
       </div>
     </section>
     <!-- end about section -->
+
+    <!-- pricing section -->
+    <section class="pricing_section layout_padding" id="pricing-section">
+      <div class="container">
+        <div class="heading_container">
+          <img src="images/heading-img.png" alt="">
+          <h2>Affordable Pricing</h2>
+          <p>We offer competitive prices for all pet care services in Cuttack. Your pets deserve the best, and we make it affordable.</p>
+        </div>
+        <div class="row">
+          <div class="col-md-4">
+            <div class="pricing-box">
+              <h4>Full Grooming</h4>
+              <p>Includes bathing, haircut, and nail trimming.</p>
+              <h3>₹800</h3>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="pricing-box">
+              <h4>Training Package</h4>
+              <p>5 sessions of obedience training for dogs.</p>
+              <h3>₹2500</h3>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="pricing-box">
+              <h4>Vaccination Bundle</h4>
+              <p>Complete vaccination for dogs and cats.</p>
+              <h3>₹1500</h3>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- end pricing section -->
 
     <!-- contact section -->
     <section class="contact_section layout_padding-top" id="contact-section">
@@ -173,40 +196,11 @@
     </section>
     <!-- end contact section -->
 
-    <!-- info section -->
-    <section class="info_section ">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6 col-lg-3">
-            <div class="info_contact">
-              <h5>CONTACT INFO</h5>
-              <div>
-                <img src="images/call.png" alt="" />
-                <p>+91 9876543210</p>
-              </div>
-              <div>
-                <img src="images/mail.png" alt="" />
-                <p>support@cuttackpetcare.com</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-3">
-            <div class="info_time">
-              <h5>Opening Hours</h5>
-              <p>Monday to Saturday</p>
-              <p>10:00 AM to 7:00 PM (IST)</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- end info section -->
-
     <!-- footer section -->
     <section class="container-fluid footer_section ">
       <p>
         &copy; 2025 All Rights Reserved. Design by
-        <a href="https://html.design/">Free Html Templates</a>
+        <a href="#">Abhilash Panda</a>
       </p>
     </section>
     <!-- end footer section -->
