--- a/index.html
+++ b/index.html
@@ -128,25 +128,32 @@
           <p>We offer competitive prices for all pet care services in Cuttack. Your pets deserve the best, and we make it affordable.</p>
         </div>
         <div class="row">
-          <div class="col-md-4">
+          <div class="col-md-3">
             <div class="pricing-box">
               <h4>Full Grooming</h4>
               <p>Includes bathing, haircut, and nail trimming.</p>
               <h3>₹800</h3>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-3">
             <div class="pricing-box">
               <h4>Training Package</h4>
               <p>5 sessions of obedience training for dogs.</p>
               <h3>₹2500</h3>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-3">
             <div class="pricing-box">
               <h4>Vaccination Bundle</h4>
               <p>Complete vaccination for dogs and cats.</p>
               <h3>₹1500</h3>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="pricing-box">
+              <h4>Pet Daycare</h4>
+              <p>Full-day supervision and activities for your pet.</p>
+              <h3>₹1000</h3>
             </div>
           </div>
         </div>
